
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
# solana-banks-client = "1.6.2"
borsh = "0.8.1"
borsh-derive = "0.8.1"
solana-program = "=1.7.3"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "=1.7.3"
solana-sdk = "=1.7.3"

[lib]
name = "futurecontract"
crate-type = ["cdylib", "lib"]
